fix render on mobile

--- a/star_ecommerce/web-tinhocngoisao/wp-content/plugins/woocommerce-sale-date/widget/homepage-widget/assets/private/scss/client_style.scss
+++ b/star_ecommerce/web-tinhocngoisao/wp-content/plugins/woocommerce-sale-date/widget/homepage-widget/assets/private/scss/client_style.scss
@@ -8,20 +8,22 @@
 
     .main-header {
         display: flex;
+        flex-wrap: wrap;
         color: white;
         justify-content: space-between;
         align-items: center;
         .header-title {
-            width: 25%;
+            width: 60%;
             h2 {
                 margin: 0;
                 padding: 0;
                 text-transform: uppercase;
                 font-weight: bold;
+                font-size: 1.1rem;
             }
         }
         .block-time-down {
-            width: 15%;
+            width: 40%;
             position: relative;
             height: 50px;
             display: flex;
@@ -47,17 +49,18 @@
             }
         }
         .block-time-items {
-            width: 60%;
+            width: 100%;
             display: flex;
             .block-time-item {
                 height: 50px;
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-end;
+                //justify-content: flex-end;
                 align-items: center;
-                width: 25%;
+                flex: 1;
                 border-right: 1px solid white;
                 color: #f27982;
+                overflow: hidden;
                 cursor: pointer;
                 &:nth-last-child(1) {
                     border-right: none;
@@ -77,23 +80,37 @@
                 }
             }
         }
+        @media screen and (min-width: 1024px) {
+            .header-title {
+                width: 25%;
+            }
+            .block-time-down {
+                width: 15%;
+            }
+            .block-time-items {
+                width: 60%;
+            }
+        }
     }
 
     .main-body {
-        height: 500px;
+        min-height: 200px;
+        height: auto;
         background-color: white;
         .header-categories {
             height: 45px;
             display: flex;
             align-items: center;
+            flex: 1;
+            overflow-x: auto;
+            overflow-y: hidden;
             .category-item {
-                span {
-                    padding: 10px;
-                    background-color: #c0c0c042;
-                    border-radius: 3px;
-                    margin: 0 10px;
-                    cursor: pointer;
-                }
+                padding: 10px;
+                background-color: #c0c0c042;
+                border-radius: 3px;
+                margin: 0 10px;
+                white-space: pre;
+                cursor: pointer;
             }
         }
         .woocommerce.column.custom-primetime-sale {
